[package]
name = "xbooth"
version = "0.1.0"
edition = "2021"


[dependencies]
borsh = "0.9"
solana-program = "1.10.0"
bytemuck = {version = "1.7.2", features = ["derive"]}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2.14"


[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.10.0"
solana-validator = "1.10.0"
solana-sdk = "1.10.0"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
